name:                pipes-stm
version:             0.1.0.0
synopsis:            Run Proxies asynchronously.
description:         

license:             BSD3
license-file:        LICENSE
author:              
maintainer:          

category:            Development
build-type:          Simple
cabal-version:       >=1.8

library

  exposed-modules:     Control.Proxy.STM
  build-depends:       base             ==4.*,
                       pipes            >= 3.0 && < 3.3,
                       transformers     >= 0.2.0.0 && < 0.4,
                       stm              ==2.4.*
